--- a/index.html
+++ b/index.html
@@ -6,44 +6,105 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicholas Clark</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <!-- Using to enable scroll to behavior -->
+    <script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest/lib/bundle.min.js"></script>
+    <!-- Using for social media buttons -->
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
+    <script src="scripts.js"></script>
 </head>
 <body>
     <div class="card">
         <div class="card-info">
-            <img class="profile-img" src="./naclark.jpg" />
-            <div class="name-title">
-                <h3>Nicholas Clark</h3>
-                <h5>Student at Carnegie Mellon</h5>
-                <p>Text about me</p>
+            <div>
+                <img class="profile-img" src="./assets/naclark.png" />
+                <div class="name-title">
+                    <h3>Nicholas Clark</h3>
+                    <!-- <h5>Studying CS at CMU</h5> -->
+                    <h5>Sophomore studying Computer Science at Carnegie Mellon University</h5>
+                    <!-- <h5>I'm a sophomore at Carnegie Mellon studying Computer Science.</h5> -->
+                </div>
+            </div>
+            <div class="contact-icons">
+                <a href="https://www.linkedin.com/in/najclark/" class="icon" target="_blank">
+                    <span><i class="fab fa-linkedin-in"></i></span>
+                </a>
+                <a href="https://github.com/najclark" class="icon" target="_blank">
+                    <span><i class="fab fa-github"></i></span>
+                </a>
+                <a href="mailto:nicholas@californiaclarks.com" class="icon" target="_blank">
+                    <span><i class="fas fa-envelope"></i></span>
+                </a>
+                <a href="tel:6193929983" class="icon" target="_blank">
+                    <span><i class="fas fa-phone"></i></span>
+                </a>
             </div>
         </div>
         <div class="card-content">
             <div class="card-navbar">
-                <button class="nav-btn">Experience</button>
-                <button class="nav-btn">Projects</button>
-                <button class="nav-btn">Resume</button>
-                <button class="nav-btn">Contact</button>
+                <button class="nav-btn" id="experience">Experience</button>
+                <button class="nav-btn" id="projects">Projects</button>
+                <button class="nav-btn" id="resume">Resume</button>
             </div>
-            <div class="carousel">
-                <div class="list">
+            <div class="carousel" id="main-carousel">
+                <div class="list carousel-slide" id="experience-carousel">
                     <div class="list-card">
-                        <img class="list-img" src="./naclark.jpg" />
+                        <img class="list-img" src="./assets/sei.png" />
                         <div class="list-card-content">
                             <h3>Software Engineering Institute</h3>
-                            <p>Short description of role</p>
+                            <p>Designed and implemented a dynamic virtual LAN management system using the .NET framework and PostgreSQL with automated vlan allocation and vlan free endpoints, allowing for the creation of conflict free virtual on the smae network through use of Terraform on the Curcible Framework. </p>
                         </div>
                     </div>
                     <div class="list-card">
-                        <img class="list-img" src="./naclark.jpg" />
-                        Software Engineering Institute
+                        <img class="list-img" src="./assets/213.png" />
+                        <div class="list-card-content">
+                            <h3>Introduction to Computer Systems</h3>
+                            <p>15-213 is an undergraduate and master's course with 450+ students. As a TA, I led recitations of 20 students, held weekly office hours, and participated in the development and grading of the final exam.</p>
+                        </div>
                     </div>
                     <div class="list-card">
-                        <img class="list-img" src="./naclark.jpg" />
-                        Software Engineering Institute
+                        <img class="list-img" src="./assets/amazon.png" />
+                        <div class="list-card-content">
+                            <h3>Amazon</h3>
+                            <p>Worked on the Alexa Shopping List Deals team to develop a Java Database Access Layer API using the internal Coral Service Framework, AWS, DynamoDB, and an AWS EC2 Linux Cloud Desktop. I designed automated unit and integration tests as part of the CI/CD build pipeline to ensure the three million monthly requests to the API met performance expectations.</p>
+                        </div>
                     </div>
                     <div class="list-card">
-                        <img class="list-img" src="./naclark.jpg" />
-                        Software Engineering Institute
+                        <img class="list-img" src="./assets/cssi.png" />
+                        <div class="list-card-content">
+                            <h3>Google CSSI</h3>
+                            <p>I participated in a 4-week intensive computer science web development curriculum taught by Google engineers. For a final project, I collaboratively delivered an interactive web game using 1400 total lines of JavaScript, HTML, and CSS in an accelerated 5-day sprint.</p>
+                        </div>
+                    </div>
+                    <div class="list-card">
+                        <img class="list-img" src="./assets/sdsc.png" />
+                        <div class="list-card-content">
+                            <h3>San Diego Supercomputer Center</h3>
+                            <p>Worked with 3 additional interns to develop a support ticket machine learning text classification model. The final system improved response times for common support requests, and was showcased in a final presentation before product users and senior staff.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="list carousel-slide" id="projects-carousel">
+                    <div class="list-card">
+                        <img class="list-img" src="./assets/leetcode.png" />
+                        <div class="list-card-content">
+                            <h3>Leetcode Leaderboards</h3>
+                            <p>I created a Leetcode contest system written in NodeJS, Express, and MongoDB. This project was designed to help users build up consistent study patterns of algorithmic technical interview questions.</p>
+                        </div>
+                    </div>
+                    <div class="list-card">
+                        <img class="list-img" src="./assets/tldraw.png" />
+                        <div class="list-card-content">
+                            <h3>Tldraw</h3>
+                            <p>Tldraw is an online drawing app written in Typescript. As part of an open source contribution, I collaboratively fixed a menu navigation bug related to the undo functionality in the canvas not working while the tool selection meny was open.</p>
+                        </div>
+                    </div>
+                    <div class="list-card">
+                        <img class="list-img" src="./assets/barexam.png" />
+                        <div class="list-card-content">
+                            <h3>Bar Exam</h3>
+                            <p>Bar Exam is an online game that has users guess what musical artist sung or rapped a lyric written in React and NodeJS. The game connects with the Genius API to allow users the ability to add their favorite lyrics to the game from their favorite songs.</p>
+                        </div>
                     </div>
                 </div>
             </div>
