Added basic responsive design

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicholas Clark</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="small.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- Using to enable scroll to behavior -->
     <script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest/lib/bundle.min.js"></script>
@@ -16,7 +17,7 @@
 <body>
     <div class="card">
         <div class="card-info">
-            <div>
+            <div class="my-info">
                 <img class="profile-img" src="./assets/naclark.png" />
                 <div class="name-title">
                     <h3>Nicholas Clark</h3>
